reference/5.1/Microsoft.PowerShell.Utility/Import-Csv.md
---
external help file: Microsoft.PowerShell.Commands.Utility.dll-Help.xml
keywords: powershell,командлет
Locale: en-US
Module Name: Microsoft.PowerShell.Utility
ms.date: 04/23/2019
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.utility/import-csv?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Import-Csv
ms.openlocfilehash: 6d060e0325ba10391f04348178f28b2793fe37fe
ms.sourcegitcommit: 9b28fb9a3d72655bb63f62af18b3a5af6a05cd3f
ms.translationtype: MT
ms.contentlocale: ru-RU
ms.lasthandoff: 07/07/2020
ms.locfileid: "93227606"
---
# <span data-ttu-id="55f98-103">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="55f98-103">Import-Csv</span></span>

## <span data-ttu-id="55f98-104">Краткий обзор</span><span class="sxs-lookup"><span data-stu-id="55f98-104">SYNOPSIS</span></span>
<span data-ttu-id="55f98-105">Создает пользовательские объекты, подобные табличным, из элементов в файле с разделителями-запятыми (CSV).</span><span class="sxs-lookup"><span data-stu-id="55f98-105">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

## <span data-ttu-id="55f98-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="55f98-106">SYNTAX</span></span>

### <span data-ttu-id="55f98-107">Delimiter (по умолчанию)</span><span class="sxs-lookup"><span data-stu-id="55f98-107">Delimiter (Default)</span></span>

```
Import-Csv [[-Path] <string[]>] [[-Delimiter] <char>] [-LiteralPath <string[]>] [-Header <string[]>]
 [-Encoding <string>] [<CommonParameters>]
```

### <span data-ttu-id="55f98-108">UseCulture</span><span class="sxs-lookup"><span data-stu-id="55f98-108">UseCulture</span></span>

```
Import-Csv [[-Path] <string[]>] -UseCulture [-LiteralPath <string[]>] [-Header <string[]>]
 [-Encoding <string>] [<CommonParameters>]
```

## <span data-ttu-id="55f98-109">DESCRIPTION</span><span class="sxs-lookup"><span data-stu-id="55f98-109">DESCRIPTION</span></span>

<span data-ttu-id="55f98-110">`Import-Csv`Командлет создает пользовательские объекты, подобные табличным, из элементов в CSV-файлах.</span><span class="sxs-lookup"><span data-stu-id="55f98-110">The `Import-Csv` cmdlet creates table-like custom objects from the items in CSV files.</span></span> <span data-ttu-id="55f98-111">Каждый столбец в CSV-файле становится свойством пользовательского объекта, а элементы в строках становятся значениями свойств.</span><span class="sxs-lookup"><span data-stu-id="55f98-111">Each column in the CSV file becomes a property of the custom object and the items in rows become the property values.</span></span> <span data-ttu-id="55f98-112">`Import-Csv` работает с любым CSV-файлом, включая файлы, созданные `Export-Csv` командлетом.</span><span class="sxs-lookup"><span data-stu-id="55f98-112">`Import-Csv` works on any CSV file, including files that are generated by the `Export-Csv` cmdlet.</span></span>

<span data-ttu-id="55f98-113">С помощью параметров `Import-Csv` командлета можно указать строку заголовков столбцов и разделитель элементов, а также `Import-Csv` использовать разделитель списка для текущего языка и региональных параметров в качестве разделителя элементов.</span><span class="sxs-lookup"><span data-stu-id="55f98-113">You can use the parameters of the `Import-Csv` cmdlet to specify the column header row and the item delimiter, or direct `Import-Csv` to use the list separator for the current culture as the item delimiter.</span></span>

<span data-ttu-id="55f98-114">Также можно использовать `ConvertTo-Csv` `ConvertFrom-Csv` командлеты и для преобразования объектов в строки CSV (и обратно).</span><span class="sxs-lookup"><span data-stu-id="55f98-114">You can also use the `ConvertTo-Csv` and `ConvertFrom-Csv` cmdlets to convert objects to CSV strings (and back).</span></span> <span data-ttu-id="55f98-115">Эти командлеты аналогичны `Export-CSV` `Import-Csv` командлетам и, за исключением того, что они не работают с файлами.</span><span class="sxs-lookup"><span data-stu-id="55f98-115">These cmdlets are the same as the `Export-CSV` and `Import-Csv` cmdlets, except that they do not deal with files.</span></span>

<span data-ttu-id="55f98-116">Если запись строки заголовка в CSV-файле содержит пустое значение или null, PowerShell вставляет имя строки заголовка по умолчанию и выводит предупреждающее сообщение.</span><span class="sxs-lookup"><span data-stu-id="55f98-116">If a header row entry in a CSV file contains an empty or null value, PowerShell inserts a default header row name and displays a warning message.</span></span>

<span data-ttu-id="55f98-117">`Import-Csv` для определения формата кодирования файла использует символ-отметку (BOM).</span><span class="sxs-lookup"><span data-stu-id="55f98-117">`Import-Csv` uses the byte-order-mark (BOM) to detect the encoding format of the file.</span></span> <span data-ttu-id="55f98-118">Если файл не имеет BOM, предполагается, что используется кодировка UTF8.</span><span class="sxs-lookup"><span data-stu-id="55f98-118">If the file has no BOM, it assumes the encoding is UTF8.</span></span>

## <span data-ttu-id="55f98-119">Примеры</span><span class="sxs-lookup"><span data-stu-id="55f98-119">EXAMPLES</span></span>

### <span data-ttu-id="55f98-120">Пример 1. Импорт объектов процессов</span><span class="sxs-lookup"><span data-stu-id="55f98-120">Example 1: Import process objects</span></span>

<span data-ttu-id="55f98-121">В этом примере показано, как экспортировать и импортировать CSV-файл объектов Process.</span><span class="sxs-lookup"><span data-stu-id="55f98-121">This example shows how to export and then import a CSV file of process objects.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv
$P = Import-Csv -Path .\Processes.csv
$P | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name                       MemberType   Definition
----                       ----------   ----------
Equals                     Method       bool Equals(System.Object obj)
GetHashCode                Method       int GetHashCode()
GetType                    Method       type GetType()
ToString                   Method       string ToString()
BasePriority               NoteProperty string BasePriority=8
Company                    NoteProperty string Company=Microsoft Corporation
...
```

```powershell
$P | Format-Table
```

```Output
Name                   SI Handles VM            WS        PM        NPM    Path
----                   -- ------- --            --        --        ---    ----
ApplicationFrameHost   4  407     2199293489152 15884288  15151104  23792  C:\WINDOWS\system32\ApplicationFrameHost.exe
...
wininit                0  157     2199112204288 4591616   1630208   10376
winlogon               4  233     2199125549056 7659520   2826240   10992  C:\WINDOWS\System32\WinLogon.exe
WinStore.App           4  846     873435136     33652736  26607616  55432  C:\Program Files\WindowsApps\Microsoft.WindowsStore_11712.1001.13.0_x64__8weky...
WmiPrvSE               0  201     2199100219392 8830976   3297280   10632  C:\WINDOWS\system32\wbem\wmiprvse.exe
WmiPrvSE               0  407     2199157727232 18509824  12922880  16624  C:\WINDOWS\system32\wbem\wmiprvse.exe
WUDFHost               0  834     2199310204928 51945472  87441408  24984  C:\Windows\System32\WUDFHost.exe
```

<span data-ttu-id="55f98-122">`Get-Process`Командлет отправляет объекты процесса по конвейеру в `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="55f98-122">The `Get-Process` cmdlet sends process objects down the pipeline to the `Export-Csv`.</span></span> <span data-ttu-id="55f98-123">`Export-Csv`Командлет преобразует объекты процесса в строки CSV и сохраняет строки в файле Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="55f98-123">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="55f98-124">`Import-Csv`Командлет импортирует строки CSV из файла Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="55f98-124">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>
<span data-ttu-id="55f98-125">Строки сохраняются в `$P` переменной.</span><span class="sxs-lookup"><span data-stu-id="55f98-125">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="55f98-126">`$P`Переменная отправляется в `Get-Member` командлет, который отображает свойства импортированных строк CSV.</span><span class="sxs-lookup"><span data-stu-id="55f98-126">The `$P` variable is sent down the pipeline to the `Get-Member` cmdlet that displays the properties of the imported CSV strings.</span></span> <span data-ttu-id="55f98-127">`$P`Переменная отправляется в командлет по конвейеру `Format-Table` и отображает объекты.</span><span class="sxs-lookup"><span data-stu-id="55f98-127">The `$P` variable is sent down the pipeline to the `Format-Table` cmdlet and displays the objects.</span></span>

### <span data-ttu-id="55f98-128">Пример 2. Указание разделителя</span><span class="sxs-lookup"><span data-stu-id="55f98-128">Example 2: Specify the delimiter</span></span>

<span data-ttu-id="55f98-129">В этом примере показано, как использовать параметр **разделителя** `Import-Csv` командлета.</span><span class="sxs-lookup"><span data-stu-id="55f98-129">This example shows how to use the **Delimiter** parameter of the `Import-Csv` cmdlet.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv -Delimiter :
$P = Import-Csv -Path .\Processes.csv -Delimiter :
$P | Format-Table
```

<span data-ttu-id="55f98-130">`Get-Process`Командлет отправляет объекты процесса по конвейеру в `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="55f98-130">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="55f98-131">`Export-Csv`Командлет преобразует объекты процесса в строки CSV и сохраняет строки в файле Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="55f98-131">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span>
<span data-ttu-id="55f98-132">Параметр- **Разделитель** используется для указания разделителя с двоеточием.</span><span class="sxs-lookup"><span data-stu-id="55f98-132">The **Delimiter** parameter is used to specify a colon delimiter.</span></span> <span data-ttu-id="55f98-133">`Import-Csv`Командлет импортирует строки CSV из файла Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="55f98-133">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span> <span data-ttu-id="55f98-134">Строки сохраняются в `$P` переменной.</span><span class="sxs-lookup"><span data-stu-id="55f98-134">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="55f98-135">В `$P` переменную отправляется в командлет по конвейеру `Format-Table` .</span><span class="sxs-lookup"><span data-stu-id="55f98-135">To `$P` variable is sent down the pipeline to the `Format-Table` cmdlet.</span></span>

### <span data-ttu-id="55f98-136">Пример 3. Указание текущего языка и региональных параметров для разделителя</span><span class="sxs-lookup"><span data-stu-id="55f98-136">Example 3: Specify the current culture for the delimiter</span></span>

<span data-ttu-id="55f98-137">В этом примере показано, как использовать `Import-Csv` командлет с параметром **UseCulture** .</span><span class="sxs-lookup"><span data-stu-id="55f98-137">This example shows how to use the `Import-Csv` cmdlet with the **UseCulture** parameter.</span></span>

```powershell
(Get-Culture).TextInfo.ListSeparator
Get-Process | Export-Csv -Path .\Processes.csv -UseCulture
Import-Csv -Path .\Processes.csv -UseCulture
```

<span data-ttu-id="55f98-138">`Get-Culture`Командлет использует вложенные свойства **TextInfo** и **ListSeparator** для получения разделителя списка по умолчанию текущего языка и региональных параметров.</span><span class="sxs-lookup"><span data-stu-id="55f98-138">The `Get-Culture` cmdlet uses the nested properties **TextInfo** and **ListSeparator** to get the current culture's default list separator.</span></span> <span data-ttu-id="55f98-139">`Get-Process`Командлет отправляет объекты процесса по конвейеру в `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="55f98-139">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="55f98-140">`Export-Csv`Командлет преобразует объекты процесса в строки CSV и сохраняет строки в файле Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="55f98-140">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="55f98-141">Параметр **UseCulture** использует разделитель списка по умолчанию текущего языка и региональных параметров.</span><span class="sxs-lookup"><span data-stu-id="55f98-141">The **UseCulture** parameter uses the current culture's default list separator.</span></span> <span data-ttu-id="55f98-142">`Import-Csv`Командлет импортирует строки CSV из файла Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="55f98-142">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>

### <span data-ttu-id="55f98-143">Пример 4. изменение имен свойств в импортированном объекте</span><span class="sxs-lookup"><span data-stu-id="55f98-143">Example 4: Change property names in an imported object</span></span>

<span data-ttu-id="55f98-144">В этом примере показано, как использовать параметр **Header** объекта `Import-Csv` для изменения имен свойств в результирующем импортируемом объекте.</span><span class="sxs-lookup"><span data-stu-id="55f98-144">This example shows how to use the **Header** parameter of `Import-Csv` to change the names of properties in the resulting imported object.</span></span>

```powershell
Start-Job -ScriptBlock { Get-Process } | Export-Csv -Path .\Jobs.csv -NoTypeInformation
$Header = 'State', 'MoreData', 'StatusMessage', 'Location', 'Command', 'StateInfo', 'Finished',
  'InstanceId', 'Id', 'Name', 'ChildJobs', 'BeginTime', 'EndTime', 'JobType', 'Output', 'Error',
  'Progress', 'Verbose', 'Debug', 'Warning', 'Information'
# Delete the default header from file
$A = Get-Content -Path .\Jobs.csv
$A = $A[1..($A.Count - 1)]
$A | Out-File -FilePath .\Jobs.csv
$J = Import-Csv -Path .\Jobs.csv -Header $Header
$J
```

```Output
State         : Running
MoreData      : True
StatusMessage :
Location      : localhost
Command       : Get-Process
StateInfo     : Running
Finished      : System.Threading.ManualResetEvent
InstanceId    : a259eb63-6824-4b97-a033-305108ae1c2e
Id            : 1
Name          : Job1
ChildJobs     : System.Collections.Generic.List`1[System.Management.Automation.Job]
BeginTime     : 12/20/2018 18:59:57
EndTime       :
JobType       : BackgroundJob
Output        : System.Management.Automation.PSDataCollection`1[System.Management.Automation.PSObject]
Error         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ErrorRecord]
Progress      : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ProgressRecord]
Verbose       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.VerboseRecord]
Debug         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.DebugRecord]
Warning       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.WarningRecord]
Information   : System.Management.Automation.PSDataCollection`1[System.Management.Automation.InformationRecord]
```

<span data-ttu-id="55f98-145">`Start-Job`Командлет запускает фоновое задание, которое выполняется `Get-Process` .</span><span class="sxs-lookup"><span data-stu-id="55f98-145">The `Start-Job` cmdlet starts a background job that runs `Get-Process`.</span></span> <span data-ttu-id="55f98-146">Объект задания передается по конвейеру в `Export-Csv` командлет и преобразуется в строку CSV.</span><span class="sxs-lookup"><span data-stu-id="55f98-146">A job object is sent down the pipeline to the `Export-Csv` cmdlet and converted to a CSV string.</span></span> <span data-ttu-id="55f98-147">Параметр **NoTypeInformation** удаляет заголовок сведений о типе из выходных данных CSV и является необязательным в PowerShell Core.</span><span class="sxs-lookup"><span data-stu-id="55f98-147">The **NoTypeInformation** parameter removes the type information header from CSV output and is optional in PowerShell Core.</span></span>
<span data-ttu-id="55f98-148">`$Header`Переменная содержит пользовательский заголовок, который заменяет следующие значения по умолчанию: **хасморедата** , **JobStateInfo** , **псбегинтиме** , **псендтиме** и **псжобтипенаме**.</span><span class="sxs-lookup"><span data-stu-id="55f98-148">The `$Header` variable contains a custom header that replaces the following default values: **HasMoreData** , **JobStateInfo** , **PSBeginTime** , **PSEndTime** , and **PSJobTypeName**.</span></span> <span data-ttu-id="55f98-149">`$A`Переменная использует `Get-Content` командлет для получения строки CSV из файла Jobs.csv.</span><span class="sxs-lookup"><span data-stu-id="55f98-149">The `$A` variable uses the `Get-Content` cmdlet to get the CSV string from the Jobs.csv file.</span></span> <span data-ttu-id="55f98-150">`$A`Переменная используется для удаления заголовка по умолчанию из файла.</span><span class="sxs-lookup"><span data-stu-id="55f98-150">The `$A` variable is used to remove the default header from the file.</span></span> <span data-ttu-id="55f98-151">`Out-File`Командлет сохраняет новую версию файла Jobs.csv в `$A` переменной.</span><span class="sxs-lookup"><span data-stu-id="55f98-151">The `Out-File` cmdlet saves the new version of the Jobs.csv file in the `$A` variable.</span></span> <span data-ttu-id="55f98-152">`Import-Csv`Командлет импортирует файл Jobs.csv и использует параметр **Header** для применения `$Header` переменной.</span><span class="sxs-lookup"><span data-stu-id="55f98-152">The `Import-Csv` cmdlet imports the Jobs.csv file and uses the **Header** parameter to apply the `$Header` variable.</span></span> <span data-ttu-id="55f98-153">`$J`Переменная содержит импортированный **PSCustomObject** и отображает объект в консоли PowerShell.</span><span class="sxs-lookup"><span data-stu-id="55f98-153">The `$J` variable contains the imported **PSCustomObject** and displays the object in the PowerShell console.</span></span>

### <span data-ttu-id="55f98-154">Пример 5. Создание пользовательского объекта с помощью CSV-файла</span><span class="sxs-lookup"><span data-stu-id="55f98-154">Example 5: Create a custom object using a CSV file</span></span>

<span data-ttu-id="55f98-155">В этом примере показано, как создать пользовательский объект в PowerShell с помощью CSV-файла.</span><span class="sxs-lookup"><span data-stu-id="55f98-155">This example shows how to create a custom object in PowerShell by using a CSV file.</span></span>

```powershell
Get-Content -Path .\Links.csv
```

```Output
113207,about_Aliases
113208,about_Arithmetic_Operators
113209,about_Arrays
113210,about_Assignment_Operators
113212,about_Automatic_Variables
113213,about_Break
113214,about_Command_Precedence
113215,about_Command_Syntax
144309,about_Comment_Based_Help
113216,about_CommonParameters
113217,about_Comparison_Operators
113218,about_Continue
113219,about_Core_Commands
113220,about_Data_Section
```

```powershell
$A = Import-Csv -Path .\Links.csv -Header 'LinkID', 'TopicTitle'
$A | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name        MemberType   Definition
----        ----------   ----------
Equals      Method       bool Equals(System.Object obj)
GetHashCode Method       int GetHashCode()
GetType     Method       type GetType()
ToString    Method       string ToString()
LinkID      NoteProperty string LinkID=113207
TopicTitle  NoteProperty string TopicTitle=about_Aliases
```

```powershell
$A | Where-Object -Property TopicTitle -Like '*alias*'
```

```Output
LinkID TopicTitle
------ ----------
113207 about_Aliases
```

<span data-ttu-id="55f98-156">Чтобы создать файл Links.csv, используйте значения, показанные в `Get-Content` выходных данных.</span><span class="sxs-lookup"><span data-stu-id="55f98-156">To create your Links.csv file, use the values shown in the `Get-Content` output.</span></span>

<span data-ttu-id="55f98-157">`Get-Content`Командлет отображает файл Links.csv.</span><span class="sxs-lookup"><span data-stu-id="55f98-157">The `Get-Content` cmdlet displays the Links.csv file.</span></span> <span data-ttu-id="55f98-158">`Import-Csv`Командлет импортирует файл Links.csv.</span><span class="sxs-lookup"><span data-stu-id="55f98-158">The `Import-Csv` cmdlet imports the Links.csv file.</span></span> <span data-ttu-id="55f98-159">Параметр **Header** указывает имена свойств **LinkId** и **топиктитле**.</span><span class="sxs-lookup"><span data-stu-id="55f98-159">The **Header** parameter specifies the property names **LinkId** and **TopicTitle**.</span></span> <span data-ttu-id="55f98-160">Объекты хранятся в `$A` переменной.</span><span class="sxs-lookup"><span data-stu-id="55f98-160">The objects are stored in the `$A` variable.</span></span> <span data-ttu-id="55f98-161">`Get-Member`Командлет показывает имена свойств из параметра **Header** .</span><span class="sxs-lookup"><span data-stu-id="55f98-161">The `Get-Member` cmdlet shows the property names from the **Header** parameter.</span></span> <span data-ttu-id="55f98-162">`Where-Object`Командлет выбирает объекты со свойством **топиктитле** , которое включает **псевдоним**.</span><span class="sxs-lookup"><span data-stu-id="55f98-162">The `Where-Object` cmdlet selects objects with the **TopicTitle** property that includes **alias**.</span></span>

### <span data-ttu-id="55f98-163">Пример 6. Импорт CSV-файла, в котором отсутствует значение</span><span class="sxs-lookup"><span data-stu-id="55f98-163">Example 6: Import a CSV that is missing a value</span></span>

<span data-ttu-id="55f98-164">В этом примере показано, как `Import-Csv` командлет в PowerShell реагирует, когда строка заголовка в CSV-файле содержит пустое или пустое значение.</span><span class="sxs-lookup"><span data-stu-id="55f98-164">This example shows how the `Import-Csv` cmdlet in PowerShell responds when the header row in a CSV file includes a null or empty value.</span></span> <span data-ttu-id="55f98-165">`Import-Csv` заменяет имя по умолчанию для отсутствующей строки заголовка, которое стало именем свойства объекта, который `Import-Csv` возвращает значение.</span><span class="sxs-lookup"><span data-stu-id="55f98-165">`Import-Csv` substitutes a default name for the missing header row that becomes the property name of the object that `Import-Csv` returns.</span></span>

```powershell
Get-Content -Path .\Projects.csv
```

```Output
ProjectID,ProjectName,,Completed
13,Inventory,Redmond,True
440,,FarEast,True
469,Marketing,Europe,False
```

```powershell
Import-Csv -Path .\Projects.csv
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.

ProjectID ProjectName H1      Completed
--------- ----------- --      ---------
13        Inventory   Redmond True
440                   FarEast True
469       Marketing   Europe  False
```

```powershell
(Import-Csv -Path .\Projects.csv).H1
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.
Redmond
FarEast
Europe
```

<span data-ttu-id="55f98-166">Чтобы создать файл Projects.csv, используйте значения, показанные в `Get-Content` выходных данных примера.</span><span class="sxs-lookup"><span data-stu-id="55f98-166">To create your Projects.csv file, use the values shown in the example's `Get-Content` output.</span></span>

<span data-ttu-id="55f98-167">`Get-Content`Командлет отображает файл Projects.csv.</span><span class="sxs-lookup"><span data-stu-id="55f98-167">The `Get-Content` cmdlet displays the Projects.csv file.</span></span> <span data-ttu-id="55f98-168">В строке заголовка отсутствует значение между **имя_проекта** и **Completed**.</span><span class="sxs-lookup"><span data-stu-id="55f98-168">The header row is missing a value between **ProjectName** and **Completed**.</span></span> <span data-ttu-id="55f98-169">`Import-Csv`Командлет импортирует файл Projects.csv и отображает предупреждающее сообщение, поскольку **H1** является именем заголовка по умолчанию.</span><span class="sxs-lookup"><span data-stu-id="55f98-169">The `Import-Csv` cmdlet imports the Projects.csv file and displays a warning message because **H1** is a default header name.</span></span> <span data-ttu-id="55f98-170">`(Import-Csv -Path
.\Projects.csv).H1`Команда возвращает значения свойств **H1** и отображает предупреждение.</span><span class="sxs-lookup"><span data-stu-id="55f98-170">The `(Import-Csv -Path
.\Projects.csv).H1` command gets the **H1** property values and displays a warning.</span></span>

## <span data-ttu-id="55f98-171">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="55f98-171">PARAMETERS</span></span>

### <span data-ttu-id="55f98-172">-Delimiter</span><span class="sxs-lookup"><span data-stu-id="55f98-172">-Delimiter</span></span>

<span data-ttu-id="55f98-173">Задает разделитель для значений свойств в файле CSV.</span><span class="sxs-lookup"><span data-stu-id="55f98-173">Specifies the delimiter that separates the property values in the CSV file.</span></span>
<span data-ttu-id="55f98-174">Разделитель по умолчанию — запятая (,).</span><span class="sxs-lookup"><span data-stu-id="55f98-174">The default is a comma (,).</span></span>

<span data-ttu-id="55f98-175">Введите символ, например двоеточие (:).</span><span class="sxs-lookup"><span data-stu-id="55f98-175">Enter a character, such as a colon (:).</span></span>
<span data-ttu-id="55f98-176">Указание точки с запятой (;) заключите его в одинарные кавычки.</span><span class="sxs-lookup"><span data-stu-id="55f98-176">To specify a semicolon (;) enclose it in single quotation marks.</span></span>

<span data-ttu-id="55f98-177">Если в файле указать символ, отличный от действительного разделителя строк, то `Import-Csv` не сможет создать объекты из строк CSV и будет возвращать строки CSV.</span><span class="sxs-lookup"><span data-stu-id="55f98-177">If you specify a character other than the actual string delimiter in the file, `Import-Csv` cannot create the objects from the CSV strings and will return the CSV strings.</span></span>

```yaml
Type: System.Char
Parameter Sets: Delimiter
Aliases:

Required: False
Position: 1
Default value: comma (,)
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="55f98-178">-Encoding</span><span class="sxs-lookup"><span data-stu-id="55f98-178">-Encoding</span></span>

<span data-ttu-id="55f98-179">Указывает тип кодировки для целевого файла.</span><span class="sxs-lookup"><span data-stu-id="55f98-179">Specifies the type of encoding for the target file.</span></span> <span data-ttu-id="55f98-180">Значение по умолчанию — `Default`.</span><span class="sxs-lookup"><span data-stu-id="55f98-180">The default value is `Default`.</span></span>

<span data-ttu-id="55f98-181">Для этого параметра допустимы следующие значения:</span><span class="sxs-lookup"><span data-stu-id="55f98-181">The acceptable values for this parameter are as follows:</span></span>

- <span data-ttu-id="55f98-182">`ASCII` Использует кодировку ASCII (7-разрядных).</span><span class="sxs-lookup"><span data-stu-id="55f98-182">`ASCII` Uses ASCII (7-bit) character set.</span></span>
- <span data-ttu-id="55f98-183">`BigEndianUnicode` Использует UTF-16 с обратным порядком байтов.</span><span class="sxs-lookup"><span data-stu-id="55f98-183">`BigEndianUnicode` Uses UTF-16 with the big-endian byte order.</span></span>
- <span data-ttu-id="55f98-184">`Default` Использует кодировку, соответствующую активной кодовой странице системы (обычно ANSI).</span><span class="sxs-lookup"><span data-stu-id="55f98-184">`Default` Uses the encoding that corresponds to the system's active code page (usually ANSI).</span></span>
- <span data-ttu-id="55f98-185">`OEM` Использует кодировку, соответствующую текущей кодовой странице OEM системы.</span><span class="sxs-lookup"><span data-stu-id="55f98-185">`OEM` Uses the encoding that corresponds to the system's current OEM code page.</span></span>
- <span data-ttu-id="55f98-186">`Unicode` Использует UTF-16 с прямым порядком байтов.</span><span class="sxs-lookup"><span data-stu-id="55f98-186">`Unicode` Uses UTF-16 with the little-endian byte order.</span></span>
- <span data-ttu-id="55f98-187">`UTF7` Использует UTF-7.</span><span class="sxs-lookup"><span data-stu-id="55f98-187">`UTF7` Uses UTF-7.</span></span>
- <span data-ttu-id="55f98-188">`UTF8` Использует UTF-8.</span><span class="sxs-lookup"><span data-stu-id="55f98-188">`UTF8` Uses UTF-8.</span></span>
- <span data-ttu-id="55f98-189">`UTF32` Использует UTF-32 с прямым порядком байтов.</span><span class="sxs-lookup"><span data-stu-id="55f98-189">`UTF32` Uses UTF-32 with the little-endian byte order.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:
Accepted values: ASCII, BigEndianUnicode, Default, OEM, Unicode, UTF7, UTF8, UTF32

Required: False
Position: Named
Default value: Default
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="55f98-190">-Header</span><span class="sxs-lookup"><span data-stu-id="55f98-190">-Header</span></span>

<span data-ttu-id="55f98-191">Указывает альтернативную строку заголовков столбцов для импортируемого файла.</span><span class="sxs-lookup"><span data-stu-id="55f98-191">Specifies an alternate column header row for the imported file.</span></span> <span data-ttu-id="55f98-192">Заголовок столбца определяет имена свойств объектов, созданных `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="55f98-192">The column header determines the property names of the objects created by `Import-Csv`.</span></span>

<span data-ttu-id="55f98-193">Введите заголовки столбцов в виде списка с разделителями-запятыми.</span><span class="sxs-lookup"><span data-stu-id="55f98-193">Enter column headers as a comma-separated list.</span></span> <span data-ttu-id="55f98-194">Не заключайте в кавычки строку заголовка.</span><span class="sxs-lookup"><span data-stu-id="55f98-194">Do not enclose the header string in quotation marks.</span></span> <span data-ttu-id="55f98-195">Заключить заголовок каждого столбца в одинарные кавычки.</span><span class="sxs-lookup"><span data-stu-id="55f98-195">Enclose each column header in single quotation marks.</span></span>

<span data-ttu-id="55f98-196">Если ввести меньшее количество заголовков столбцов, чем столбцы данных, оставшиеся столбцы данных будут удалены.</span><span class="sxs-lookup"><span data-stu-id="55f98-196">If you enter fewer column headers than there are data columns, the remaining data columns are discarded.</span></span> <span data-ttu-id="55f98-197">Если ввести больше заголовков столбцов, чем столбцы данных, то будут созданы дополнительные заголовки столбцов с пустыми столбцами данных.</span><span class="sxs-lookup"><span data-stu-id="55f98-197">If you enter more column headers than there are data columns, the additional column headers are created with empty data columns.</span></span>

<span data-ttu-id="55f98-198">При использовании параметра **Header** удалите исходную строку заголовков из файла CSV.</span><span class="sxs-lookup"><span data-stu-id="55f98-198">When using the **Header** parameter, delete the original header row from the CSV file.</span></span> <span data-ttu-id="55f98-199">В противном случае `Import-Csv` создает дополнительный объект на основе элементов в строке заголовка.</span><span class="sxs-lookup"><span data-stu-id="55f98-199">Otherwise, `Import-Csv` creates an extra object from the items in the header row.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="55f98-200">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="55f98-200">-LiteralPath</span></span>

<span data-ttu-id="55f98-201">Указывает путь к импортируемому файлу CSV.</span><span class="sxs-lookup"><span data-stu-id="55f98-201">Specifies the path to the CSV file to import.</span></span> <span data-ttu-id="55f98-202">В отличие от параметра **Path** , значение параметра **LiteralPath** используется в точности так, как вводится.</span><span class="sxs-lookup"><span data-stu-id="55f98-202">Unlike **Path** , the value of the **LiteralPath** parameter is used exactly as it is typed.</span></span> <span data-ttu-id="55f98-203">Никакие символы не интерпретируются как знаки подстановки.</span><span class="sxs-lookup"><span data-stu-id="55f98-203">No characters are interpreted as wildcards.</span></span> <span data-ttu-id="55f98-204">Если путь содержит escape-символы, заключите его в одинарные кавычки.</span><span class="sxs-lookup"><span data-stu-id="55f98-204">If the path includes escape characters, enclose it in single quotation marks.</span></span> <span data-ttu-id="55f98-205">Одинарные кавычки указывают PowerShell не интерпретировать какие-либо символы как escape-последовательности.</span><span class="sxs-lookup"><span data-stu-id="55f98-205">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases: PSPath

Required: False
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="55f98-206">-Path</span><span class="sxs-lookup"><span data-stu-id="55f98-206">-Path</span></span>

<span data-ttu-id="55f98-207">Указывает путь к импортируемому файлу CSV.</span><span class="sxs-lookup"><span data-stu-id="55f98-207">Specifies the path to the CSV file to import.</span></span>
<span data-ttu-id="55f98-208">Можно также передать по конвейеру путь к `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="55f98-208">You can also pipe a path to `Import-Csv`.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: 0
Default value: None
Accept pipeline input: True (ByValue)
Accept wildcard characters: False
```

### <span data-ttu-id="55f98-209">-UseCulture</span><span class="sxs-lookup"><span data-stu-id="55f98-209">-UseCulture</span></span>

<span data-ttu-id="55f98-210">Использует разделитель списка для текущего языка и региональных параметров в качестве разделителя элементов.</span><span class="sxs-lookup"><span data-stu-id="55f98-210">Uses the list separator for the current culture as the item delimiter.</span></span> <span data-ttu-id="55f98-211">Чтобы найти разделитель списка для языка и региональных параметров, используйте следующую команду: `(Get-Culture).TextInfo.ListSeparator` .</span><span class="sxs-lookup"><span data-stu-id="55f98-211">To find the list separator for a culture, use the following command: `(Get-Culture).TextInfo.ListSeparator`.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: UseCulture
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="55f98-212">Общие параметры</span><span class="sxs-lookup"><span data-stu-id="55f98-212">CommonParameters</span></span>

<span data-ttu-id="55f98-213">Этот командлет поддерживает общие параметры: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction и -WarningVariable.</span><span class="sxs-lookup"><span data-stu-id="55f98-213">This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable.</span></span> <span data-ttu-id="55f98-214">См. сведения в разделе [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span><span class="sxs-lookup"><span data-stu-id="55f98-214">For more information, see [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span></span>

## <span data-ttu-id="55f98-215">Входные данные</span><span class="sxs-lookup"><span data-stu-id="55f98-215">INPUTS</span></span>

### <span data-ttu-id="55f98-216">System.String</span><span class="sxs-lookup"><span data-stu-id="55f98-216">System.String</span></span>

<span data-ttu-id="55f98-217">Можно передать строку, содержащую путь, в `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="55f98-217">You can pipe a string that contains a path to `Import-Csv`.</span></span>

## <span data-ttu-id="55f98-218">Выходные данные</span><span class="sxs-lookup"><span data-stu-id="55f98-218">OUTPUTS</span></span>

### <span data-ttu-id="55f98-219">Объект</span><span class="sxs-lookup"><span data-stu-id="55f98-219">Object</span></span>

<span data-ttu-id="55f98-220">Этот командлет возвращает объекты, описанные в содержимом CSV-файла.</span><span class="sxs-lookup"><span data-stu-id="55f98-220">This cmdlet returns the objects described by the content in the CSV file.</span></span>

## <span data-ttu-id="55f98-221">ПРИМЕЧАНИЯ</span><span class="sxs-lookup"><span data-stu-id="55f98-221">NOTES</span></span>

<span data-ttu-id="55f98-222">Поскольку импортированные объекты являются версиями CSV типа объекта, они не распознаются и не форматируются с помощью записей форматирования типов PowerShell, которые отформатируют версии объектов, отформатированные не в формате CSV.</span><span class="sxs-lookup"><span data-stu-id="55f98-222">Because the imported objects are CSV versions of the object type, they are not recognized and formatted by the PowerShell type formatting entries that format the non-CSV versions of the object type.</span></span>

<span data-ttu-id="55f98-223">Результатом выполнения `Import-Csv` команды является коллекция строк, образующих пользовательский объект, подобный табличному.</span><span class="sxs-lookup"><span data-stu-id="55f98-223">The result of an `Import-Csv` command is a collection of strings that form a table-like custom object.</span></span> <span data-ttu-id="55f98-224">Каждая строка представляет собой отдельную строку, поэтому для подсчета строк таблицы можно использовать свойство **Count** объекта.</span><span class="sxs-lookup"><span data-stu-id="55f98-224">Each row is a separate string, so you can use the **Count** property of the object to count the table rows.</span></span> <span data-ttu-id="55f98-225">Столбцы представляют свойства объекта, а поля строк — значения этих свойств.</span><span class="sxs-lookup"><span data-stu-id="55f98-225">The columns are the properties of the object and items in the rows are the property values.</span></span>

<span data-ttu-id="55f98-226">Строка заголовков столбцов определяет число столбцов и их имена.</span><span class="sxs-lookup"><span data-stu-id="55f98-226">The column header row determines the number of columns and the column names.</span></span> <span data-ttu-id="55f98-227">Имена столбцов также являются именами свойств объектов.</span><span class="sxs-lookup"><span data-stu-id="55f98-227">The column names are also the names of the properties of the objects.</span></span> <span data-ttu-id="55f98-228">Первая строка интерпретируется как заголовки столбцов, если только не используется параметр **Header** для указания заголовков столбцов.</span><span class="sxs-lookup"><span data-stu-id="55f98-228">The first row is interpreted to be the column headers, unless you use the **Header** parameter to specify column headers.</span></span> <span data-ttu-id="55f98-229">Если в какой-либо строке содержится больше значений, чем в строке заголовков, лишние значения игнорируются.</span><span class="sxs-lookup"><span data-stu-id="55f98-229">If any row has more values than the header row, the additional values are ignored.</span></span>

<span data-ttu-id="55f98-230">Если в строке заголовка столбца отсутствует значение или оно содержит значение null или пустое, `Import-Csv` то в качестве заголовка отсутствующего столбца и имени свойства используется **H** , за которым следует число.</span><span class="sxs-lookup"><span data-stu-id="55f98-230">If the column header row is missing a value or contains a null or empty value, `Import-Csv` uses **H** followed by a number for the missing column header and property name.</span></span>

<span data-ttu-id="55f98-231">В CSV-файле каждый объект представлен списком значений свойств объекта с разделителями-запятыми.</span><span class="sxs-lookup"><span data-stu-id="55f98-231">In the CSV file, each object is represented by a comma-separated list of the property values of the object.</span></span> <span data-ttu-id="55f98-232">Значения свойств преобразуются в строки с помощью метода **ToString ()** объекта, поэтому они представлены именем значения свойства.</span><span class="sxs-lookup"><span data-stu-id="55f98-232">The property values are converted to strings by using the **ToString()** method of the object, so they are represented by the name of the property value.</span></span> <span data-ttu-id="55f98-233">`Export-Csv` не экспортирует методы объекта.</span><span class="sxs-lookup"><span data-stu-id="55f98-233">`Export-Csv` does not export the methods of the object.</span></span>

## <span data-ttu-id="55f98-234">Связанные ссылки</span><span class="sxs-lookup"><span data-stu-id="55f98-234">RELATED LINKS</span></span>

[<span data-ttu-id="55f98-235">ConvertFrom-Csv</span><span class="sxs-lookup"><span data-stu-id="55f98-235">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)

[<span data-ttu-id="55f98-236">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="55f98-236">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)

[<span data-ttu-id="55f98-237">Export-Csv</span><span class="sxs-lookup"><span data-stu-id="55f98-237">Export-Csv</span></span>](Export-Csv.md)

[<span data-ttu-id="55f98-238">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="55f98-238">Get-Culture</span></span>](Get-Culture.md)
