reference/7.0/Microsoft.PowerShell.Utility/Import-Csv.md
---
external help file: Microsoft.PowerShell.Commands.Utility.dll-Help.xml
keywords: powershell,командлет
Locale: en-US
Module Name: Microsoft.PowerShell.Utility
ms.date: 1/8/2019
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.utility/import-csv?view=powershell-7&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Import-Csv
ms.openlocfilehash: 6c738c11aaa5131cef0ad0457dc50b376152c1f0
ms.sourcegitcommit: de63e9481cf8024883060aae61fb02c59c2de662
ms.translationtype: MT
ms.contentlocale: ru-RU
ms.lasthandoff: 07/03/2020
ms.locfileid: "93226110"
---
# <span data-ttu-id="b991f-103">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="b991f-103">Import-Csv</span></span>

## <span data-ttu-id="b991f-104">Краткий обзор</span><span class="sxs-lookup"><span data-stu-id="b991f-104">SYNOPSIS</span></span>
<span data-ttu-id="b991f-105">Создает пользовательские объекты, подобные табличным, из элементов в файле с разделителями-запятыми (CSV).</span><span class="sxs-lookup"><span data-stu-id="b991f-105">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

## <span data-ttu-id="b991f-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="b991f-106">SYNTAX</span></span>

### <span data-ttu-id="b991f-107">Делимитерпас (по умолчанию)</span><span class="sxs-lookup"><span data-stu-id="b991f-107">DelimiterPath (Default)</span></span>

```
Import-Csv [[-Delimiter] <Char>] [-Path] <String[]> [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

### <span data-ttu-id="b991f-108">делимитерлитералпас</span><span class="sxs-lookup"><span data-stu-id="b991f-108">DelimiterLiteralPath</span></span>

```
Import-Csv [[-Delimiter] <Char>] -LiteralPath <String[]> [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

### <span data-ttu-id="b991f-109">културепас</span><span class="sxs-lookup"><span data-stu-id="b991f-109">CulturePath</span></span>

```
Import-Csv [-Path] <String[]> -UseCulture [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

### <span data-ttu-id="b991f-110">културелитералпас</span><span class="sxs-lookup"><span data-stu-id="b991f-110">CultureLiteralPath</span></span>

```
Import-Csv -LiteralPath <String[]> -UseCulture [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

## <span data-ttu-id="b991f-111">DESCRIPTION</span><span class="sxs-lookup"><span data-stu-id="b991f-111">DESCRIPTION</span></span>

<span data-ttu-id="b991f-112">`Import-Csv`Командлет создает пользовательские объекты, подобные табличным, из элементов в CSV-файлах.</span><span class="sxs-lookup"><span data-stu-id="b991f-112">The `Import-Csv` cmdlet creates table-like custom objects from the items in CSV files.</span></span> <span data-ttu-id="b991f-113">Каждый столбец в CSV-файле становится свойством пользовательского объекта, а элементы в строках становятся значениями свойств.</span><span class="sxs-lookup"><span data-stu-id="b991f-113">Each column in the CSV file becomes a property of the custom object and the items in rows become the property values.</span></span> <span data-ttu-id="b991f-114">`Import-Csv` работает с любым CSV-файлом, включая файлы, созданные `Export-Csv` командлетом.</span><span class="sxs-lookup"><span data-stu-id="b991f-114">`Import-Csv` works on any CSV file, including files that are generated by the `Export-Csv` cmdlet.</span></span>

<span data-ttu-id="b991f-115">С помощью параметров `Import-Csv` командлета можно указать строку заголовков столбцов и разделитель элементов, а также `Import-Csv` использовать разделитель списка для текущего языка и региональных параметров в качестве разделителя элементов.</span><span class="sxs-lookup"><span data-stu-id="b991f-115">You can use the parameters of the `Import-Csv` cmdlet to specify the column header row and the item delimiter, or direct `Import-Csv` to use the list separator for the current culture as the item delimiter.</span></span>

<span data-ttu-id="b991f-116">Также можно использовать `ConvertTo-Csv` `ConvertFrom-Csv` командлеты и для преобразования объектов в строки CSV (и обратно).</span><span class="sxs-lookup"><span data-stu-id="b991f-116">You can also use the `ConvertTo-Csv` and `ConvertFrom-Csv` cmdlets to convert objects to CSV strings (and back).</span></span> <span data-ttu-id="b991f-117">Эти командлеты аналогичны `Export-CSV` `Import-Csv` командлетам и, за исключением того, что они не работают с файлами.</span><span class="sxs-lookup"><span data-stu-id="b991f-117">These cmdlets are the same as the `Export-CSV` and `Import-Csv` cmdlets, except that they do not deal with files.</span></span>

<span data-ttu-id="b991f-118">Если запись строки заголовка в CSV-файле содержит пустое значение или null, PowerShell вставляет имя строки заголовка по умолчанию и выводит предупреждающее сообщение.</span><span class="sxs-lookup"><span data-stu-id="b991f-118">If a header row entry in a CSV file contains an empty or null value, PowerShell inserts a default header row name and displays a warning message.</span></span>

<span data-ttu-id="b991f-119">Начиная с PowerShell 6,0, `Import-Csv` теперь поддерживает расширенный формат файла журнала W3C.</span><span class="sxs-lookup"><span data-stu-id="b991f-119">Starting with PowerShell 6.0, `Import-Csv` now supports the W3C Extended Log File Format.</span></span>

## <span data-ttu-id="b991f-120">Примеры</span><span class="sxs-lookup"><span data-stu-id="b991f-120">EXAMPLES</span></span>

### <span data-ttu-id="b991f-121">Пример 1. Импорт объектов процессов</span><span class="sxs-lookup"><span data-stu-id="b991f-121">Example 1: Import process objects</span></span>

<span data-ttu-id="b991f-122">В этом примере показано, как экспортировать и импортировать CSV-файл объектов Process.</span><span class="sxs-lookup"><span data-stu-id="b991f-122">This example shows how to export and then import a CSV file of process objects.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv
$P = Import-Csv -Path .\Processes.csv
$P | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name                       MemberType   Definition
----                       ----------   ----------
Equals                     Method       bool Equals(System.Object obj)
GetHashCode                Method       int GetHashCode()
GetType                    Method       type GetType()
ToString                   Method       string ToString()
BasePriority               NoteProperty string BasePriority=8
Company                    NoteProperty string Company=Microsoft Corporation
...
```

```powershell
$P | Format-Table
```

```Output
Name                   SI Handles VM            WS        PM        NPM    Path
----                   -- ------- --            --        --        ---    ----
ApplicationFrameHost   4  407     2199293489152 15884288  15151104  23792  C:\WINDOWS\system32\ApplicationFrameHost.exe
...
wininit                0  157     2199112204288 4591616   1630208   10376
winlogon               4  233     2199125549056 7659520   2826240   10992  C:\WINDOWS\System32\WinLogon.exe
WinStore.App           4  846     873435136     33652736  26607616  55432  C:\Program Files\WindowsApps\Microsoft.WindowsStore_11712.1001.13.0_x64__8weky...
WmiPrvSE               0  201     2199100219392 8830976   3297280   10632  C:\WINDOWS\system32\wbem\wmiprvse.exe
WmiPrvSE               0  407     2199157727232 18509824  12922880  16624  C:\WINDOWS\system32\wbem\wmiprvse.exe
WUDFHost               0  834     2199310204928 51945472  87441408  24984  C:\Windows\System32\WUDFHost.exe
```

<span data-ttu-id="b991f-123">`Get-Process`Командлет отправляет объекты процесса по конвейеру в `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="b991f-123">The `Get-Process` cmdlet sends process objects down the pipeline to the `Export-Csv`.</span></span> <span data-ttu-id="b991f-124">`Export-Csv`Командлет преобразует объекты процесса в строки CSV и сохраняет строки в файле Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="b991f-124">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="b991f-125">`Import-Csv`Командлет импортирует строки CSV из файла Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="b991f-125">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>
<span data-ttu-id="b991f-126">Строки сохраняются в `$P` переменной.</span><span class="sxs-lookup"><span data-stu-id="b991f-126">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="b991f-127">`$P`Переменная отправляется в `Get-Member` командлет, который отображает свойства импортированных строк CSV.</span><span class="sxs-lookup"><span data-stu-id="b991f-127">The `$P` variable is sent down the pipeline to the `Get-Member` cmdlet that displays the properties of the imported CSV strings.</span></span> <span data-ttu-id="b991f-128">`$P`Переменная отправляется в командлет по конвейеру `Format-Table` и отображает объекты.</span><span class="sxs-lookup"><span data-stu-id="b991f-128">The `$P` variable is sent down the pipeline to the `Format-Table` cmdlet and displays the objects.</span></span>

### <span data-ttu-id="b991f-129">Пример 2. Указание разделителя</span><span class="sxs-lookup"><span data-stu-id="b991f-129">Example 2: Specify the delimiter</span></span>

<span data-ttu-id="b991f-130">В этом примере показано, как использовать параметр **разделителя** `Import-Csv` командлета.</span><span class="sxs-lookup"><span data-stu-id="b991f-130">This example shows how to use the **Delimiter** parameter of the `Import-Csv` cmdlet.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv -Delimiter :
$P = Import-Csv -Path .\Processes.csv -Delimiter :
$P | Format-Table
```

<span data-ttu-id="b991f-131">`Get-Process`Командлет отправляет объекты процесса по конвейеру в `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="b991f-131">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="b991f-132">`Export-Csv`Командлет преобразует объекты процесса в строки CSV и сохраняет строки в файле Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="b991f-132">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span>
<span data-ttu-id="b991f-133">Параметр- **Разделитель** используется для указания разделителя с двоеточием.</span><span class="sxs-lookup"><span data-stu-id="b991f-133">The **Delimiter** parameter is used to specify a colon delimiter.</span></span> <span data-ttu-id="b991f-134">`Import-Csv`Командлет импортирует строки CSV из файла Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="b991f-134">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span> <span data-ttu-id="b991f-135">Строки сохраняются в `$P` переменной.</span><span class="sxs-lookup"><span data-stu-id="b991f-135">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="b991f-136">В `$P` переменную отправляется в командлет по конвейеру `Format-Table` .</span><span class="sxs-lookup"><span data-stu-id="b991f-136">To `$P` variable is sent down the pipeline to the `Format-Table` cmdlet.</span></span>

### <span data-ttu-id="b991f-137">Пример 3. Указание текущего языка и региональных параметров для разделителя</span><span class="sxs-lookup"><span data-stu-id="b991f-137">Example 3: Specify the current culture for the delimiter</span></span>

<span data-ttu-id="b991f-138">В этом примере показано, как использовать `Import-Csv` командлет с параметром **UseCulture** .</span><span class="sxs-lookup"><span data-stu-id="b991f-138">This example shows how to use the `Import-Csv` cmdlet with the **UseCulture** parameter.</span></span>

```powershell
(Get-Culture).TextInfo.ListSeparator
Get-Process | Export-Csv -Path .\Processes.csv -UseCulture
Import-Csv -Path .\Processes.csv -UseCulture
```

<span data-ttu-id="b991f-139">`Get-Culture`Командлет использует вложенные свойства **TextInfo** и **ListSeparator** для получения разделителя списка по умолчанию текущего языка и региональных параметров.</span><span class="sxs-lookup"><span data-stu-id="b991f-139">The `Get-Culture` cmdlet uses the nested properties **TextInfo** and **ListSeparator** to get the current culture's default list separator.</span></span> <span data-ttu-id="b991f-140">`Get-Process`Командлет отправляет объекты процесса по конвейеру в `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="b991f-140">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="b991f-141">`Export-Csv`Командлет преобразует объекты процесса в строки CSV и сохраняет строки в файле Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="b991f-141">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="b991f-142">Параметр **UseCulture** использует разделитель списка по умолчанию текущего языка и региональных параметров.</span><span class="sxs-lookup"><span data-stu-id="b991f-142">The **UseCulture** parameter uses the current culture's default list separator.</span></span> <span data-ttu-id="b991f-143">`Import-Csv`Командлет импортирует строки CSV из файла Processes.csv.</span><span class="sxs-lookup"><span data-stu-id="b991f-143">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>

### <span data-ttu-id="b991f-144">Пример 4. изменение имен свойств в импортированном объекте</span><span class="sxs-lookup"><span data-stu-id="b991f-144">Example 4: Change property names in an imported object</span></span>

<span data-ttu-id="b991f-145">В этом примере показано, как использовать параметр **Header** объекта `Import-Csv` для изменения имен свойств в результирующем импортируемом объекте.</span><span class="sxs-lookup"><span data-stu-id="b991f-145">This example shows how to use the **Header** parameter of `Import-Csv` to change the names of properties in the resulting imported object.</span></span>

```powershell
Start-Job -ScriptBlock { Get-Process } | Export-Csv -Path .\Jobs.csv -NoTypeInformation
$Header = 'State', 'MoreData', 'StatusMessage', 'Location', 'Command', 'StateInfo', 'Finished', 'InstanceId', 'Id', 'Name', 'ChildJobs', 'BeginTime', 'EndTime', 'JobType', 'Output', 'Error', 'Progress', 'Verbose', 'Debug', 'Warning', 'Information'
# Delete the default header from file
$A = Get-Content -Path .\Jobs.csv
$A = $A[1..($A.Count - 1)]
$A | Out-File -FilePath .\Jobs.csv
$J = Import-Csv -Path .\Jobs.csv -Header $Header
$J
```

```Output
State         : Running
MoreData      : True
StatusMessage :
Location      : localhost
Command       : Get-Process
StateInfo     : Running
Finished      : System.Threading.ManualResetEvent
InstanceId    : a259eb63-6824-4b97-a033-305108ae1c2e
Id            : 1
Name          : Job1
ChildJobs     : System.Collections.Generic.List`1[System.Management.Automation.Job]
BeginTime     : 12/20/2018 18:59:57
EndTime       :
JobType       : BackgroundJob
Output        : System.Management.Automation.PSDataCollection`1[System.Management.Automation.PSObject]
Error         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ErrorRecord]
Progress      : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ProgressRecord]
Verbose       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.VerboseRecord]
Debug         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.DebugRecord]
Warning       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.WarningRecord]
Information   : System.Management.Automation.PSDataCollection`1[System.Management.Automation.InformationRecord]
```

<span data-ttu-id="b991f-146">`Start-Job`Командлет запускает фоновое задание, которое выполняется `Get-Process` .</span><span class="sxs-lookup"><span data-stu-id="b991f-146">The `Start-Job` cmdlet starts a background job that runs `Get-Process`.</span></span> <span data-ttu-id="b991f-147">Объект задания передается по конвейеру в `Export-Csv` командлет и преобразуется в строку CSV.</span><span class="sxs-lookup"><span data-stu-id="b991f-147">A job object is sent down the pipeline to the `Export-Csv` cmdlet and converted to a CSV string.</span></span> <span data-ttu-id="b991f-148">Параметр **NoTypeInformation** удаляет заголовок сведений о типе из выходных данных CSV и является необязательным в PowerShell Core.</span><span class="sxs-lookup"><span data-stu-id="b991f-148">The **NoTypeInformation** parameter removes the type information header from CSV output and is optional in PowerShell Core.</span></span>
<span data-ttu-id="b991f-149">`$Header`Переменная содержит пользовательский заголовок, который заменяет следующие значения по умолчанию: **хасморедата** , **JobStateInfo** , **псбегинтиме** , **псендтиме** и **псжобтипенаме**.</span><span class="sxs-lookup"><span data-stu-id="b991f-149">The `$Header` variable contains a custom header that replaces the following default values: **HasMoreData** , **JobStateInfo** , **PSBeginTime** , **PSEndTime** , and **PSJobTypeName**.</span></span> <span data-ttu-id="b991f-150">`$A`Переменная использует `Get-Content` командлет для получения строки CSV из файла Jobs.csv.</span><span class="sxs-lookup"><span data-stu-id="b991f-150">The `$A` variable uses the `Get-Content` cmdlet to get the CSV string from the Jobs.csv file.</span></span> <span data-ttu-id="b991f-151">`$A`Переменная используется для удаления заголовка по умолчанию из файла.</span><span class="sxs-lookup"><span data-stu-id="b991f-151">The `$A` variable is used to remove the default header from the file.</span></span> <span data-ttu-id="b991f-152">`Out-File`Командлет сохраняет новую версию файла Jobs.csv в `$A` переменной.</span><span class="sxs-lookup"><span data-stu-id="b991f-152">The `Out-File` cmdlet saves the new version of the Jobs.csv file in the `$A` variable.</span></span> <span data-ttu-id="b991f-153">`Import-Csv`Командлет импортирует файл Jobs.csv и использует параметр **Header** для применения `$Header` переменной.</span><span class="sxs-lookup"><span data-stu-id="b991f-153">The `Import-Csv` cmdlet imports the Jobs.csv file and uses the **Header** parameter to apply the `$Header` variable.</span></span> <span data-ttu-id="b991f-154">`$J`Переменная содержит импортированный **PSCustomObject** и отображает объект в консоли PowerShell.</span><span class="sxs-lookup"><span data-stu-id="b991f-154">The `$J` variable contains the imported **PSCustomObject** and displays the object in the PowerShell console.</span></span>

### <span data-ttu-id="b991f-155">Пример 5. Создание пользовательского объекта с помощью CSV-файла</span><span class="sxs-lookup"><span data-stu-id="b991f-155">Example 5: Create a custom object using a CSV file</span></span>

<span data-ttu-id="b991f-156">В этом примере показано, как создать пользовательский объект в PowerShell с помощью CSV-файла.</span><span class="sxs-lookup"><span data-stu-id="b991f-156">This example shows how to create a custom object in PowerShell by using a CSV file.</span></span>

```powershell
Get-Content -Path .\Links.csv
```

```Output
113207,about_Aliases
113208,about_Arithmetic_Operators
113209,about_Arrays
113210,about_Assignment_Operators
113212,about_Automatic_Variables
113213,about_Break
113214,about_Command_Precedence
113215,about_Command_Syntax
144309,about_Comment_Based_Help
113216,about_CommonParameters
113217,about_Comparison_Operators
113218,about_Continue
113219,about_Core_Commands
113220,about_Data_Section
```

```powershell
$A = Import-Csv -Path .\Links.csv -Header 'LinkID', 'TopicTitle'
$A | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name        MemberType   Definition
----        ----------   ----------
Equals      Method       bool Equals(System.Object obj)
GetHashCode Method       int GetHashCode()
GetType     Method       type GetType()
ToString    Method       string ToString()
LinkID      NoteProperty string LinkID=113207
TopicTitle  NoteProperty string TopicTitle=about_Aliases
```

```powershell
$A | Where-Object -Property TopicTitle -Like '*alias*'
```

```Output
LinkID TopicTitle
------ ----------
113207 about_Aliases
```

<span data-ttu-id="b991f-157">Чтобы создать файл Links.csv, используйте значения, показанные в `Get-Content` выходных данных.</span><span class="sxs-lookup"><span data-stu-id="b991f-157">To create your Links.csv file, use the values shown in the `Get-Content` output.</span></span>

<span data-ttu-id="b991f-158">`Get-Content`Командлет отображает файл Links.csv.</span><span class="sxs-lookup"><span data-stu-id="b991f-158">The `Get-Content` cmdlet displays the Links.csv file.</span></span> <span data-ttu-id="b991f-159">`Import-Csv`Командлет импортирует файл Links.csv.</span><span class="sxs-lookup"><span data-stu-id="b991f-159">The `Import-Csv` cmdlet imports the Links.csv file.</span></span> <span data-ttu-id="b991f-160">Параметр **Header** указывает имена свойств **LinkId** и **топиктитле**.</span><span class="sxs-lookup"><span data-stu-id="b991f-160">The **Header** parameter specifies the property names **LinkId** and **TopicTitle**.</span></span> <span data-ttu-id="b991f-161">Объекты хранятся в `$A` переменной.</span><span class="sxs-lookup"><span data-stu-id="b991f-161">The objects are stored in the `$A` variable.</span></span> <span data-ttu-id="b991f-162">`Get-Member`Командлет показывает имена свойств из параметра **Header** .</span><span class="sxs-lookup"><span data-stu-id="b991f-162">The `Get-Member` cmdlet shows the property names from the **Header** parameter.</span></span> <span data-ttu-id="b991f-163">`Where-Object`Командлет выбирает объекты со свойством **топиктитле** , которое включает **псевдоним**.</span><span class="sxs-lookup"><span data-stu-id="b991f-163">The `Where-Object` cmdlet selects objects with the **TopicTitle** property that includes **alias**.</span></span>

### <span data-ttu-id="b991f-164">Пример 6. Импорт CSV-файла, в котором отсутствует значение</span><span class="sxs-lookup"><span data-stu-id="b991f-164">Example 6: Import a CSV that is missing a value</span></span>

<span data-ttu-id="b991f-165">В этом примере показано, как `Import-Csv` командлет в PowerShell реагирует, когда строка заголовка в CSV-файле содержит пустое или пустое значение.</span><span class="sxs-lookup"><span data-stu-id="b991f-165">This example shows how the `Import-Csv` cmdlet in PowerShell responds when the header row in a CSV file includes a null or empty value.</span></span> <span data-ttu-id="b991f-166">`Import-Csv` заменяет имя по умолчанию для отсутствующей строки заголовка, которое стало именем свойства объекта, который `Import-Csv` возвращает значение.</span><span class="sxs-lookup"><span data-stu-id="b991f-166">`Import-Csv` substitutes a default name for the missing header row that becomes the property name of the object that `Import-Csv` returns.</span></span>

```powershell
Get-Content -Path .\Projects.csv
```

```Output
ProjectID,ProjectName,,Completed
13,Inventory,Redmond,True
440,,FarEast,True
469,Marketing,Europe,False
```

```powershell
Import-Csv -Path .\Projects.csv
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.

ProjectID ProjectName H1      Completed
--------- ----------- --      ---------
13        Inventory   Redmond True
440                   FarEast True
469       Marketing   Europe  False
```

```powershell
(Import-Csv -Path .\Projects.csv).H1
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.
Redmond
FarEast
Europe
```

<span data-ttu-id="b991f-167">Чтобы создать файл Projects.csv, используйте значения, показанные в `Get-Content` выходных данных примера.</span><span class="sxs-lookup"><span data-stu-id="b991f-167">To create your Projects.csv file, use the values shown in the example's `Get-Content` output.</span></span>

<span data-ttu-id="b991f-168">`Get-Content`Командлет отображает файл Projects.csv.</span><span class="sxs-lookup"><span data-stu-id="b991f-168">The `Get-Content` cmdlet displays the Projects.csv file.</span></span> <span data-ttu-id="b991f-169">В строке заголовка отсутствует значение между **имя_проекта** и **Completed**.</span><span class="sxs-lookup"><span data-stu-id="b991f-169">The header row is missing a value between **ProjectName** and **Completed**.</span></span> <span data-ttu-id="b991f-170">`Import-Csv`Командлет импортирует файл Projects.csv и отображает предупреждающее сообщение, поскольку **H1** является именем заголовка по умолчанию.</span><span class="sxs-lookup"><span data-stu-id="b991f-170">The `Import-Csv` cmdlet imports the Projects.csv file and displays a warning message because **H1** is a default header name.</span></span> <span data-ttu-id="b991f-171">`(Import-Csv -Path
.\Projects.csv).H1`Команда возвращает значения свойств **H1** и отображает предупреждение.</span><span class="sxs-lookup"><span data-stu-id="b991f-171">The `(Import-Csv -Path
.\Projects.csv).H1` command gets the **H1** property values and displays a warning.</span></span>

## <span data-ttu-id="b991f-172">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="b991f-172">PARAMETERS</span></span>

### <span data-ttu-id="b991f-173">-Delimiter</span><span class="sxs-lookup"><span data-stu-id="b991f-173">-Delimiter</span></span>

<span data-ttu-id="b991f-174">Задает разделитель для значений свойств в файле CSV.</span><span class="sxs-lookup"><span data-stu-id="b991f-174">Specifies the delimiter that separates the property values in the CSV file.</span></span>
<span data-ttu-id="b991f-175">Разделитель по умолчанию — запятая (,).</span><span class="sxs-lookup"><span data-stu-id="b991f-175">The default is a comma (,).</span></span>

<span data-ttu-id="b991f-176">Введите символ, например двоеточие (:).</span><span class="sxs-lookup"><span data-stu-id="b991f-176">Enter a character, such as a colon (:).</span></span>
<span data-ttu-id="b991f-177">Указание точки с запятой (;) заключите его в одинарные кавычки.</span><span class="sxs-lookup"><span data-stu-id="b991f-177">To specify a semicolon (;) enclose it in single quotation marks.</span></span>

<span data-ttu-id="b991f-178">Если в файле указать символ, отличный от действительного разделителя строк, то `Import-Csv` не сможет создать объекты из строк CSV и будет возвращать строки CSV.</span><span class="sxs-lookup"><span data-stu-id="b991f-178">If you specify a character other than the actual string delimiter in the file, `Import-Csv` cannot create the objects from the CSV strings and will return the CSV strings.</span></span>

```yaml
Type: System.Char
Parameter Sets: DelimiterPath, DelimiterLiteralPath
Aliases:

Required: False
Position: 1
Default value: comma (,)
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="b991f-179">-Encoding</span><span class="sxs-lookup"><span data-stu-id="b991f-179">-Encoding</span></span>

<span data-ttu-id="b991f-180">Указывает кодировку для импортированного CSV-файла.</span><span class="sxs-lookup"><span data-stu-id="b991f-180">Specifies the encoding for the imported CSV file.</span></span> <span data-ttu-id="b991f-181">Значение по умолчанию — `utf8NoBOM`.</span><span class="sxs-lookup"><span data-stu-id="b991f-181">The default value is `utf8NoBOM`.</span></span>

<span data-ttu-id="b991f-182">Для этого параметра допустимы следующие значения:</span><span class="sxs-lookup"><span data-stu-id="b991f-182">The acceptable values for this parameter are as follows:</span></span>

- <span data-ttu-id="b991f-183">`ascii`: Использует кодировку для набора символов ASCII (7-разрядных).</span><span class="sxs-lookup"><span data-stu-id="b991f-183">`ascii`: Uses the encoding for the ASCII (7-bit) character set.</span></span>
- <span data-ttu-id="b991f-184">`bigendianunicode`: Кодируется в формате UTF-16 с обратным порядком байтов.</span><span class="sxs-lookup"><span data-stu-id="b991f-184">`bigendianunicode`: Encodes in UTF-16 format using the big-endian byte order.</span></span>
- <span data-ttu-id="b991f-185">`oem`: Использует кодировку по умолчанию для программ MS-DOS и консолей.</span><span class="sxs-lookup"><span data-stu-id="b991f-185">`oem`: Uses the default encoding for MS-DOS and console programs.</span></span>
- <span data-ttu-id="b991f-186">`unicode`: Кодируется в формате UTF-16 с прямым порядком байтов.</span><span class="sxs-lookup"><span data-stu-id="b991f-186">`unicode`: Encodes in UTF-16 format using the little-endian byte order.</span></span>
- <span data-ttu-id="b991f-187">`utf7`: Кодируется в формате UTF-7.</span><span class="sxs-lookup"><span data-stu-id="b991f-187">`utf7`: Encodes in UTF-7 format.</span></span>
- <span data-ttu-id="b991f-188">`utf8`: Кодируется в формате UTF-8.</span><span class="sxs-lookup"><span data-stu-id="b991f-188">`utf8`: Encodes in UTF-8 format.</span></span>
- <span data-ttu-id="b991f-189">`utf8BOM`: Кодирует в формате UTF-8 с меткой порядка байтов (BOM)</span><span class="sxs-lookup"><span data-stu-id="b991f-189">`utf8BOM`: Encodes in UTF-8 format with Byte Order Mark (BOM)</span></span>
- <span data-ttu-id="b991f-190">`utf8NoBOM`: Кодирует в формате UTF-8 без метки порядка байтов (BOM)</span><span class="sxs-lookup"><span data-stu-id="b991f-190">`utf8NoBOM`: Encodes in UTF-8 format without Byte Order Mark (BOM)</span></span>
- <span data-ttu-id="b991f-191">`utf32`: Кодируется в формате UTF-32.</span><span class="sxs-lookup"><span data-stu-id="b991f-191">`utf32`: Encodes in UTF-32 format.</span></span>

<span data-ttu-id="b991f-192">Начиная с PowerShell 6,2, параметр **кодировки** также разрешает числовые идентификаторы зарегистрированных кодовых страниц (например `-Encoding 1251` ,) или строковых имен зарегистрированных кодовых страниц (например `-Encoding "windows-1251"` ,).</span><span class="sxs-lookup"><span data-stu-id="b991f-192">Beginning with PowerShell 6.2, the **Encoding** parameter also allows numeric IDs of registered code pages (like `-Encoding 1251`) or string names of registered code pages (like `-Encoding "windows-1251"`).</span></span> <span data-ttu-id="b991f-193">Дополнительные сведения см. в документации .NET по [кодированию. codepage](/dotnet/api/system.text.encoding.codepage?view=netcore-2.2).</span><span class="sxs-lookup"><span data-stu-id="b991f-193">For more information, see the .NET documentation for [Encoding.CodePage](/dotnet/api/system.text.encoding.codepage?view=netcore-2.2).</span></span>

```yaml
Type: System.Text.Encoding
Parameter Sets: (All)
Aliases:
Accepted values: ASCII, BigEndianUnicode, OEM, Unicode, UTF7, UTF8, UTF8BOM, UTF8NoBOM, UTF32

Required: False
Position: Named
Default value: UTF8NoBOM
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="b991f-194">-Header</span><span class="sxs-lookup"><span data-stu-id="b991f-194">-Header</span></span>

<span data-ttu-id="b991f-195">Указывает альтернативную строку заголовков столбцов для импортируемого файла.</span><span class="sxs-lookup"><span data-stu-id="b991f-195">Specifies an alternate column header row for the imported file.</span></span> <span data-ttu-id="b991f-196">Заголовок столбца определяет имена свойств объектов, созданных `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="b991f-196">The column header determines the property names of the objects created by `Import-Csv`.</span></span>

<span data-ttu-id="b991f-197">Введите заголовки столбцов в виде списка с разделителями-запятыми.</span><span class="sxs-lookup"><span data-stu-id="b991f-197">Enter column headers as a comma-separated list.</span></span> <span data-ttu-id="b991f-198">Не заключайте в кавычки строку заголовка.</span><span class="sxs-lookup"><span data-stu-id="b991f-198">Do not enclose the header string in quotation marks.</span></span> <span data-ttu-id="b991f-199">Заключить заголовок каждого столбца в одинарные кавычки.</span><span class="sxs-lookup"><span data-stu-id="b991f-199">Enclose each column header in single quotation marks.</span></span>

<span data-ttu-id="b991f-200">Если ввести меньшее количество заголовков столбцов, чем столбцы данных, оставшиеся столбцы данных будут удалены.</span><span class="sxs-lookup"><span data-stu-id="b991f-200">If you enter fewer column headers than there are data columns, the remaining data columns are discarded.</span></span> <span data-ttu-id="b991f-201">Если ввести больше заголовков столбцов, чем столбцы данных, то будут созданы дополнительные заголовки столбцов с пустыми столбцами данных.</span><span class="sxs-lookup"><span data-stu-id="b991f-201">If you enter more column headers than there are data columns, the additional column headers are created with empty data columns.</span></span>

<span data-ttu-id="b991f-202">При использовании параметра **Header** удалите исходную строку заголовков из файла CSV.</span><span class="sxs-lookup"><span data-stu-id="b991f-202">When using the **Header** parameter, delete the original header row from the CSV file.</span></span> <span data-ttu-id="b991f-203">В противном случае `Import-Csv` создает дополнительный объект на основе элементов в строке заголовка.</span><span class="sxs-lookup"><span data-stu-id="b991f-203">Otherwise, `Import-Csv` creates an extra object from the items in the header row.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="b991f-204">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="b991f-204">-LiteralPath</span></span>

<span data-ttu-id="b991f-205">Указывает путь к импортируемому файлу CSV.</span><span class="sxs-lookup"><span data-stu-id="b991f-205">Specifies the path to the CSV file to import.</span></span> <span data-ttu-id="b991f-206">В отличие от параметра **Path** , значение параметра **LiteralPath** используется в точности так, как вводится.</span><span class="sxs-lookup"><span data-stu-id="b991f-206">Unlike **Path** , the value of the **LiteralPath** parameter is used exactly as it is typed.</span></span> <span data-ttu-id="b991f-207">Никакие символы не интерпретируются как знаки подстановки.</span><span class="sxs-lookup"><span data-stu-id="b991f-207">No characters are interpreted as wildcards.</span></span> <span data-ttu-id="b991f-208">Если путь содержит escape-символы, заключите его в одинарные кавычки.</span><span class="sxs-lookup"><span data-stu-id="b991f-208">If the path includes escape characters, enclose it in single quotation marks.</span></span> <span data-ttu-id="b991f-209">Одинарные кавычки указывают PowerShell не интерпретировать какие-либо символы как escape-последовательности.</span><span class="sxs-lookup"><span data-stu-id="b991f-209">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String[]
Parameter Sets: DelimiterLiteralPath, CultureLiteralPath
Aliases: PSPath, LP

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="b991f-210">-Path</span><span class="sxs-lookup"><span data-stu-id="b991f-210">-Path</span></span>

<span data-ttu-id="b991f-211">Указывает путь к импортируемому файлу CSV.</span><span class="sxs-lookup"><span data-stu-id="b991f-211">Specifies the path to the CSV file to import.</span></span>
<span data-ttu-id="b991f-212">Можно также передать по конвейеру путь к `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="b991f-212">You can also pipe a path to `Import-Csv`.</span></span>

```yaml
Type: System.String[]
Parameter Sets: DelimiterPath, CulturePath
Aliases:

Required: True
Position: 0
Default value: None
Accept pipeline input: True (ByPropertyName, ByValue)
Accept wildcard characters: False
```

### <span data-ttu-id="b991f-213">-UseCulture</span><span class="sxs-lookup"><span data-stu-id="b991f-213">-UseCulture</span></span>

<span data-ttu-id="b991f-214">Использует разделитель списка для текущего языка и региональных параметров в качестве разделителя элементов.</span><span class="sxs-lookup"><span data-stu-id="b991f-214">Uses the list separator for the current culture as the item delimiter.</span></span> <span data-ttu-id="b991f-215">Чтобы найти разделитель списка для языка и региональных параметров, используйте следующую команду: `(Get-Culture).TextInfo.ListSeparator` .</span><span class="sxs-lookup"><span data-stu-id="b991f-215">To find the list separator for a culture, use the following command: `(Get-Culture).TextInfo.ListSeparator`.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: CulturePath, CultureLiteralPath
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="b991f-216">Общие параметры</span><span class="sxs-lookup"><span data-stu-id="b991f-216">CommonParameters</span></span>

<span data-ttu-id="b991f-217">Этот командлет поддерживает общие параметры: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction и -WarningVariable.</span><span class="sxs-lookup"><span data-stu-id="b991f-217">This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable.</span></span> <span data-ttu-id="b991f-218">См. сведения в разделе [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span><span class="sxs-lookup"><span data-stu-id="b991f-218">For more information, see [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span></span>

## <span data-ttu-id="b991f-219">Входные данные</span><span class="sxs-lookup"><span data-stu-id="b991f-219">INPUTS</span></span>

### <span data-ttu-id="b991f-220">System.String</span><span class="sxs-lookup"><span data-stu-id="b991f-220">System.String</span></span>

<span data-ttu-id="b991f-221">Можно передать строку, содержащую путь, в `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="b991f-221">You can pipe a string that contains a path to `Import-Csv`.</span></span>

## <span data-ttu-id="b991f-222">Выходные данные</span><span class="sxs-lookup"><span data-stu-id="b991f-222">OUTPUTS</span></span>

### <span data-ttu-id="b991f-223">Объект</span><span class="sxs-lookup"><span data-stu-id="b991f-223">Object</span></span>

<span data-ttu-id="b991f-224">Этот командлет возвращает объекты, описанные в содержимом CSV-файла.</span><span class="sxs-lookup"><span data-stu-id="b991f-224">This cmdlet returns the objects described by the content in the CSV file.</span></span>

## <span data-ttu-id="b991f-225">ПРИМЕЧАНИЯ</span><span class="sxs-lookup"><span data-stu-id="b991f-225">NOTES</span></span>

<span data-ttu-id="b991f-226">Поскольку импортированные объекты являются версиями CSV типа объекта, они не распознаются и не форматируются с помощью записей форматирования типов PowerShell, которые отформатируют версии объектов, отформатированные не в формате CSV.</span><span class="sxs-lookup"><span data-stu-id="b991f-226">Because the imported objects are CSV versions of the object type, they are not recognized and formatted by the PowerShell type formatting entries that format the non-CSV versions of the object type.</span></span>

<span data-ttu-id="b991f-227">Результатом выполнения `Import-Csv` команды является коллекция строк, образующих пользовательский объект, подобный табличному.</span><span class="sxs-lookup"><span data-stu-id="b991f-227">The result of an `Import-Csv` command is a collection of strings that form a table-like custom object.</span></span> <span data-ttu-id="b991f-228">Каждая строка представляет собой отдельную строку, поэтому для подсчета строк таблицы можно использовать свойство **Count** объекта.</span><span class="sxs-lookup"><span data-stu-id="b991f-228">Each row is a separate string, so you can use the **Count** property of the object to count the table rows.</span></span> <span data-ttu-id="b991f-229">Столбцы представляют свойства объекта, а поля строк — значения этих свойств.</span><span class="sxs-lookup"><span data-stu-id="b991f-229">The columns are the properties of the object and items in the rows are the property values.</span></span>

<span data-ttu-id="b991f-230">Строка заголовков столбцов определяет число столбцов и их имена.</span><span class="sxs-lookup"><span data-stu-id="b991f-230">The column header row determines the number of columns and the column names.</span></span> <span data-ttu-id="b991f-231">Имена столбцов также являются именами свойств объектов.</span><span class="sxs-lookup"><span data-stu-id="b991f-231">The column names are also the names of the properties of the objects.</span></span> <span data-ttu-id="b991f-232">Первая строка интерпретируется как заголовки столбцов, если только не используется параметр **Header** для указания заголовков столбцов.</span><span class="sxs-lookup"><span data-stu-id="b991f-232">The first row is interpreted to be the column headers, unless you use the **Header** parameter to specify column headers.</span></span> <span data-ttu-id="b991f-233">Если в какой-либо строке содержится больше значений, чем в строке заголовков, лишние значения игнорируются.</span><span class="sxs-lookup"><span data-stu-id="b991f-233">If any row has more values than the header row, the additional values are ignored.</span></span>

<span data-ttu-id="b991f-234">Если в строке заголовка столбца отсутствует значение или оно содержит значение null или пустое, `Import-Csv` то в качестве заголовка отсутствующего столбца и имени свойства используется **H** , за которым следует число.</span><span class="sxs-lookup"><span data-stu-id="b991f-234">If the column header row is missing a value or contains a null or empty value, `Import-Csv` uses **H** followed by a number for the missing column header and property name.</span></span>

<span data-ttu-id="b991f-235">В CSV-файле каждый объект представлен списком значений свойств объекта с разделителями-запятыми.</span><span class="sxs-lookup"><span data-stu-id="b991f-235">In the CSV file, each object is represented by a comma-separated list of the property values of the object.</span></span> <span data-ttu-id="b991f-236">Значения свойств преобразуются в строки с помощью метода **ToString ()** объекта, поэтому они представлены именем значения свойства.</span><span class="sxs-lookup"><span data-stu-id="b991f-236">The property values are converted to strings by using the **ToString()** method of the object, so they are represented by the name of the property value.</span></span> <span data-ttu-id="b991f-237">`Export-Csv` не экспортирует методы объекта.</span><span class="sxs-lookup"><span data-stu-id="b991f-237">`Export-Csv` does not export the methods of the object.</span></span>

<span data-ttu-id="b991f-238">`Import-Csv` также поддерживает расширенный формат журнала W3C.</span><span class="sxs-lookup"><span data-stu-id="b991f-238">`Import-Csv` also supports the W3C Extended Log format.</span></span> <span data-ttu-id="b991f-239">Строки, начинающиеся с `#` , обрабатываются как комментарии и пропускаются, если комментарий не начинается с `#Fields:` и содержит список имен столбцов с разделителями.</span><span class="sxs-lookup"><span data-stu-id="b991f-239">Lines starting with `#` are treated as comments and ignored unless the comment starts with `#Fields:` and contains delimited list of column names.</span></span> <span data-ttu-id="b991f-240">В этом случае командлет использует эти имена столбцов.</span><span class="sxs-lookup"><span data-stu-id="b991f-240">In that case, the cmdlet uses those column names.</span></span> <span data-ttu-id="b991f-241">Это стандартный формат для Windows IIS и других журналов веб-сервера.</span><span class="sxs-lookup"><span data-stu-id="b991f-241">This is the standard format for Windows IIS and other web server logs.</span></span> <span data-ttu-id="b991f-242">Дополнительные сведения см. в разделе [Расширенный формат файла журнала](https://www.w3.org/TR/WD-logfile.html).</span><span class="sxs-lookup"><span data-stu-id="b991f-242">For more information, see [Extended Log File Format](https://www.w3.org/TR/WD-logfile.html).</span></span>

## <span data-ttu-id="b991f-243">Связанные ссылки</span><span class="sxs-lookup"><span data-stu-id="b991f-243">RELATED LINKS</span></span>

[<span data-ttu-id="b991f-244">ConvertFrom-Csv</span><span class="sxs-lookup"><span data-stu-id="b991f-244">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)

[<span data-ttu-id="b991f-245">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="b991f-245">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)

[<span data-ttu-id="b991f-246">Export-Csv</span><span class="sxs-lookup"><span data-stu-id="b991f-246">Export-Csv</span></span>](Export-Csv.md)

[<span data-ttu-id="b991f-247">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="b991f-247">Get-Culture</span></span>](Get-Culture.md)
